# mopso-cli

./: .gitignore  Cargo.toml  convergence.json  pareto_front.csv
src/: archive.rs  benchmark.rs  cli.rs  config.rs  expr.rs  main.rs  metrics.rs  mopso.rs  particle.rs  problem.rs
src/tui/: app.rs  mod.rs  runner.rs  ui.rs
